spices/ecs/tests/errors/set-wrong-component.tur
;; I4 negative regression: set-Pos! requires a WriteCap<Pos>, not
;; WriteCap<Vel>.  A system body that declared :writes [Vel] has only
;; Vel-write-cap in scope; calling set-Pos! with Vel-write-cap fails
;; nominal type checking.  This is the per-write enforcement the I4
;; cap-gating delivers (I3 alone only caught the case where the body
;; called `use-cap!` on an undeclared comp; I4 catches the case where
;; the body calls the typed accessor itself).

(defmodule set_wrong_component_test
  (export)

(import ecs/entity  :refer [entity-index])
(import ecs/storage :refer [dense-new dense-set! dense-get dense-has?])
(import ecs/world   :refer [defcomponent defworld defcomponent-accessors world-alloc-entity!])
(import ecs/cap     :refer [WriteCap ReadCap make-write-cap use-cap!])

(defstruct Pos [x : int y : int])
(defstruct Vel [x : int y : int])

(defcomponent Pos)
(defcomponent Vel)

(defworld GameWorld [Pos Vel])
(defcomponent-accessors GameWorld Pos)
(defcomponent-accessors GameWorld Vel)

(def Pos-cid 0)
(def Vel-cid 1)

(defn main [] : int
  (let [w   (make-struct GameWorld (vec-new) (:: (dense-new) (Storage Pos)) (:: (dense-new) (Storage Vel)))
        e   (world-alloc-entity! (.gens w))
        ;; Only mint a Vel write-cap.
        vc  (:: (make-write-cap Vel-cid) (WriteCap Vel))]
    ;; ERROR: set-Pos! wants WriteCap<Pos>, got WriteCap<Vel>.
    (set-Pos! vc w (entity-index e) (make-struct Pos 7 8))
    (use-cap! vc)
    0))

) ;; end defmodule set_wrong_component_test
